- Think this is final for now!  - Picture Overlay ammended to not occlude border.  - Added spacing of Nav Bar relative to the 900px    used by the pages; About, Menu, Events.  - Fixed Grid Styling on Menu Page.

--- a/RB test webpage/RB About.css
+++ b/RB test webpage/RB About.css
@@ -12,9 +12,9 @@ body::before {
     width: 100%;
     height: 100%;
     background: url("Assets/Rattlebag Logo White.png") repeat top/300px;
-    opacity: 0.05; /* change this to control how faint the PNG is */
-    pointer-events: none; /* don’t block clicks */
-   z-index: -1;  /*keeps it behind everything */
+    opacity: 0.05; 
+    pointer-events: none; 
+   z-index: -1;  
 }
 
 main {
@@ -27,7 +27,7 @@ main {
     background-repeat: no-repeat;
     background-size: 900px;
     border: 1px solid #b37373;
-    margin: 48px auto;
+    margin: 100px auto;
 }
 
 main h2 {
@@ -62,6 +62,7 @@ p a {
 }
 
 table {
+    position: relative;
     margin: 48px auto;
     border: 2px solid #b37373;
     line-height: 30px;
