--- a/RB test webpage/RB Events.css
+++ b/RB test webpage/RB Events.css
@@ -12,9 +12,9 @@ body::before {
     width: 100%;
     height: 100%;
     background: url("Assets/Rattlebag Logo White.png") repeat top/300px;
-    opacity: 0.05; /* change this to control how faint the PNG is */
-    pointer-events: none; /* don’t block clicks */
-   z-index: -1;  /*keeps it behind everything */
+    opacity: 0.05; 
+    pointer-events: none; 
+   z-index: -1;  
 }
 
 
@@ -26,7 +26,7 @@ body::before {
     width: 900px;
     height: 1000px;
     border: 1px solid #b37373;
-    margin: 48px auto;
+    margin: 100px auto;
 }
 
 .Events article {
@@ -64,6 +64,10 @@ article h3 {
 
 strong{
     padding-left: 150px;
+}
+
+strong:hover {
+    color: #7393B3;
 }
 
 #SS {
