--- a/RB test webpage/RB Home.css
+++ b/RB test webpage/RB Home.css
@@ -11,9 +11,9 @@ body::before {
     width: 100%;
     height: 100%;
     background: url("Assets/Rattlebag Logo White.png") repeat top/300px;
-    opacity: 0.05; /* change this to control how faint the PNG is */
-    pointer-events: none; /* don’t block clicks */
-   z-index: -1;  /*keeps it behind everything */
+    opacity: 0.05; 
+    pointer-events: none; 
+   z-index: -1;  
 }
 
 h1 {
@@ -28,7 +28,7 @@ h4 {
 
 .pictures {
     position: relative;
-    margin: 48px -35px;
+    margin: 100px -35px;
     display: inline-block;
 }
 
@@ -66,5 +66,8 @@ h4 {
 
 .image:hover .overlay {
     opacity: 1;
+    position: absolute;
+    left: 1px;
+    bottom: 4px;
 }
 
